src/sass/style.scss
body {
    display: flex;
    flex-flow: column nowrap;
    min-height: 100vh;

    &.lang-en #lang-en {
        display: none;
    }
    &.lang-fr #lang-fr {
        display: none;
    }
}

header {
    position: fixed;
    width: 100%;
    z-index: 2;
    user-select: none;
}

main {
    flex-grow: 1;
}

#logo-velo {
    display: none;
    position: absolute;
    top: 40px;
    left: 50px;
    height: 100px;

    @media only screen and (min-width: 1300px) {
        display: block;
    }
}

#logo-bar {
    display: none;
    position: absolute;
    top: 56px;
    left: 50%;
    width: 100%;
    transform: translateX(-50%);
    pointer-events: none;
}

.header-background {
    background-image: url("/images/header-background.jpg");
    background-image: url("/images/header-background.webp");
    background-size: cover;
    min-height: 100vh;
}

nav {
    --nav-background-color: transparent;
    --nav-text-color: white;

    background: var(--nav-background-color);
    color: var(--nav-text-color);
    transition: background .1s;

    &.scrolled,
    &.expanded {
        --nav-background-color: white;
        --nav-text-color: black;
    }

    &.scrolled {
        box-shadow: 0 5px 20px -5px rgb(0 0 0 / 20%);

        .navbar-brand {
            display: block;
        }
        #order-bread {
            display: none;
        }
    }
    &.expanded {
        box-shadow: none;
    }

    .navbar-container {
        position: relative;
    }
}

.navbar-width {
    max-width: 1000px;
    margin: 0 auto;
    padding: 16px 8px;
}

nav #navbar-toggler {
    border: transparent !important;
    background: transparent !important;
}
nav #navbar-toggler svg {
    stroke: var(--nav-text-color);
}
nav #navbar-toggler .navbar-toggler-label {
    display: none;
    color: var(--nav-text-color);

    @media only screen and (min-width: 480px) {
        display: inline;
        vertical-align: middle;
    }
}

nav #navbar-items-container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    background: rgba(255 255 255 / 90%);
    backdrop-filter: blur(10px);
    color: black;
    transform: translateY(-100%);
    opacity: 0;
    transition: transform .2s, opacity .2s;
    border-radius: 0 0 10px 10px;
    padding: 1em 0;
    z-index: -1;
}
nav.expanded #navbar-items-container {
    display: flex;
    justify-content: center;
    transform: translateY(70px);
    box-shadow: 0 5px 20px -5px rgb(0 0 0 / 20%);
    opacity: 1;
}

nav #navbar-items-container .navbar-items-list {
    display: inline-block;
    list-style: none;
    padding: 0;
    margin: 0;
}

nav .navbar-link {
    display: inline-block;
    padding: 8px;
    color: var(--nav-text-color);
    text-decoration: none !important;
}
nav .navbar-item {
    display: block;
    transition: transform .1s;
}
nav .navbar-item:hover {
    transform: translateX(6px);
}

nav .navbar-button {
    position: relative;
    display: inline-flex;
    min-height: 40px;
    border: 1px solid var(--nav-text-color);
    text-transform:uppercase;
    font-weight:bold;
    justify-content: center;
    align-items: center;
    white-space: nowrap;
}

.navbar-brand {
    font-size: 8px;
    display: none;

    @media only screen and (min-width: 400px) {
        font-size: 10px;
    }
}

.navbar-brand-small {
    font-size: 1.4em;
    line-height: 1em;
}
.navbar-brand-big {
    font-size: 2em;
    line-height: 1em;
}

@media only screen and (min-width: 950px) {
    #logo-bar {
        display: flex;
        flex-flow: row-reverse;
    }

    nav #navbar-items-container {
        position: relative;
        width: auto;
        transform: none;
        background: none;
        color: inherit;
        box-shadow: none !important;
        padding: 0;
        z-index: 0;
        box-shadow: none;
        opacity: 1;
        transform: none !important;
        backdrop-filter: none;
    }

    nav #navbar-items-container .navbar-items-list {
        display: flex;
        flex-flow: row nowrap;
        align-items: center;
        height: 100%;
    }

    nav .navbar-item {
        transform: none!important;
    }

    nav #navbar-toggler {
        display: none;
    }
}

.backdrop-shadow {
    box-shadow: 0 5px 20px -5px rgb(0 0 0 / 20%);
}

#hero-text {
    position: relative;
    width: fit-content;
    margin-top:100px;
    font-size: 32px;
    user-select: none;

    @media only screen and (min-width: 500px) {
        font-size: 48px;
    }
    
    @media only screen and (min-width: 780px) {
        font-size: 64px;
    }

    #lang-block {
        position: absolute;
        top: 0;
        right: 0;
        font-size: .25em;
        line-height: 1em;
        text-transform: uppercase;

        .lang-item {
            color: white !important;
        }

        body {
            
        }
    }
}

.dimmed {
    position: relative;

    &::before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background: rgba(0 0 0 / 60%);
    }
    & > div {
        position: relative;
    }
}

section.with-background {
    background-position: center;
    background-size:cover;
    background-attachment: fixed;
}
section p {
    text-align: justify;
}

.card-title {
    text-align: left;
    margin-top: 0.5rem!important;
    margin-bottom: 0.5rem!important;
    font-size: 1.25rem;
    font-weight: bold;
}

.card-image,
.card-image picture,
.card-image img {
    width: 100%;
}

h2 {
    text-align: center;
    margin-bottom: 1em;
}
section {
    min-height: 500px;
}

.custom-card {
    padding-left: 1em;
    padding-right: 1em;
    padding-top: 1em;

    @media only screen and (min-width: 600px) {
        padding-left: 2em;
        padding-right: 2em;
    }
}

.coord-name {
    display: inline-block;
    min-width: 6em;
}
.coord-value {
    font-weight: bold;
    text-decoration: none !important;
    color: black !important;
    line-height: 1.5em;
}

svg.menu-icon {
    stroke-linecap: round;

    path {
        transition: .15s;
    }
}

nav.expanded {
    svg.menu-icon path.menu-icon-upper {
        transform: translate(1.7px,1px) rotate(45deg) translate(-1px,-1px);;
    }
    svg.menu-icon path.menu-icon-middle {
        opacity: 0;
    }
    svg.menu-icon path.menu-icon-lower {
        transform: translate(1.7px,4.6px) rotate(-45deg) translate(-1px,-5px);;
    }

    .navbar-item .navbar-link {
        padding-left: 32px;
        padding-right: 32px;
    }
}

footer button.btn {
    background: none !important;
    border: none !important;
    margin-bottom: 3px;
}

